--- a/urban-octo-telegram-main/Develop/assets/css/style.css
+++ b/urban-octo-telegram-main/Develop/assets/css/style.css
@@ -52,7 +52,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg") alt:"fdaf";
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -84,6 +84,7 @@ p {
 
 .content-sub img {
     max-height: 200px;
+    
 }
 
 .content-sub h2 {
