--- a/urban-octo-telegram-main/Develop/assets/css/style.css
+++ b/urban-octo-telegram-main/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,7 +33,7 @@ body {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -73,7 +73,7 @@ p {
     margin-left: 20px;
 }
 /*each section within left column*/
-.content-sub {
+.search-engine-optimization, .online-reputation-management , .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -82,12 +82,12 @@ p {
     color: #ffffff;
 }
 
-.content-sub img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
     
 }
 
-.content-sub h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -104,17 +104,17 @@ p {
     background-color: #2589bd;
 }
 /*each section within right column*/
-.benefit-sub {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-sub h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-sub img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -127,6 +127,6 @@ p {
     text-align: center;
 }
 
-.footer h2 {
+.footer h4 {
     font-size: 20px;
 }
